--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:HYaLFYcgoPKDKoWRqAs8Vicl1pPd4hWoQfvbuigq9Y4=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=https://cre.test
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -23,8 +23,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=cre
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=cre
+DB_PASSWORD=password123@
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -36,15 +36,16 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+CACHE_STORE=redis
 CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_CLIENT=phpredis
+REDIS_CLIENT=predis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_DB=0
 
 MAIL_MAILER=log
 MAIL_HOST=127.0.0.1
