--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.9",
-        "laravel/passport": "^12.0",
+        "laravel/passport": "*",
+        "laravel/telescope": "^5.2",
         "laravel/tinker": "^2.9",
         "lcobucci/jwt": "^5.3",
         "predis/predis": "^2.0"
@@ -52,7 +53,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "laravel/telescope"
+            ]
         }
     },
     "config": {
