--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -20,8 +20,8 @@ jobs:
       with:
         php-version: '8.3'
     - uses: actions/checkout@v4
-    - name: Copy .env.testing
-      run: php -r "file_exists('.env.testing') || copy('.env.example', '.env.testing');"
+    - name: Copy .env
+      run: php -r "file_exists('.env') || copy('.env.testing', '.env');"
     - name: Install Dependencies
       run: composer install
     - name: Generate key
