--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,42 +1,62 @@
 name: Laravel
 
 on:
-    push:
-      branches:
-        - main
-        - develop
-    pull_request:
-      branches:
-        - main
-        - develop
+  push:
+    branches:
+      - main
+      - develop
+  pull_request:
+    branches:
+      - main
+      - develop
 
 jobs:
   laravel-tests:
-
     runs-on: ubuntu-latest
+    
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_DATABASE: testing
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+    - uses: shivammathur/setup-php@v2
       with:
         php-version: '8.3'
+        extensions: mbstring, xml, ctype, iconv, intl, pdo_mysql, mysql, zip
+        coverage: none
+        
     - uses: actions/checkout@v4
+    
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.testing', '.env');"
+      
     - name: Install Dependencies
-      run: composer install
+      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      
     - name: Generate key
       run: php artisan key:generate
+      
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
-    - name: Install MySQL
-      run: sudo apt-get install mysql-server
-    - name: Create Database on mySQL
-      run: mysql -e 'CREATE DATABASE IF NOT EXISTS testing;'
+      
+    - name: Wait for MySQL
+      run: |
+        while ! mysqladmin ping -h"127.0.0.1" -P"3306" --silent; do
+          sleep 1
+        done
+        
     - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
         DB_CONNECTION: mysql
+        DB_HOST: 127.0.0.1
+        DB_PORT: 3306
         DB_DATABASE: testing
         DB_USERNAME: root
         DB_PASSWORD: ''
       run: php artisan test
-   
