--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -23,12 +23,18 @@ jobs:
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+      
+      redis:
+        image: redis
+        ports:
+          - 6379:6379
+        options: --health-cmd="redis-cli ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
     - uses: shivammathur/setup-php@v2
       with:
         php-version: '8.3'
-        extensions: mbstring, xml, ctype, iconv, intl, pdo_mysql, mysql, zip
+        extensions: mbstring, xml, ctype, iconv, intl, pdo_mysql, mysql, zip, redis
         coverage: none
         
     - uses: actions/checkout@v4
@@ -45,11 +51,39 @@ jobs:
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
       
+    - name: Create storage directory structure
+      run: |
+        mkdir -p storage/app
+        echo '[]' > storage/app/duplicates.json
+        chmod 666 storage/app/duplicates.json
+        
     - name: Wait for MySQL
       run: |
         while ! mysqladmin ping -h"127.0.0.1" -P"3306" --silent; do
           sleep 1
         done
+        
+    - name: Run migrations
+      env:
+        DB_CONNECTION: mysql
+        DB_HOST: 127.0.0.1
+        DB_PORT: 3306
+        DB_DATABASE: testing
+        DB_USERNAME: root
+        DB_PASSWORD: ''
+      run: php artisan migrate
+        
+    - name: Generate Passport Client
+      env:
+        DB_CONNECTION: mysql
+        DB_HOST: 127.0.0.1
+        DB_PORT: 3306
+        DB_DATABASE: testing
+        DB_USERNAME: root
+        DB_PASSWORD: ''
+      run: |
+        php artisan passport:install
+        php artisan passport:client --personal --name="Testing Personal Access Client"
         
     - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
@@ -59,4 +93,7 @@ jobs:
         DB_DATABASE: testing
         DB_USERNAME: root
         DB_PASSWORD: ''
+        REDIS_HOST: 127.0.0.1
+        REDIS_PASSWORD: null
+        REDIS_PORT: 6379
       run: php artisan test
