--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -110,7 +110,10 @@ jobs:
         php artisan config:clear
         php artisan route:clear
         php artisan view:clear
-
+    
+    - name: Debug OAuth Clients
+      run: php artisan tinker --execute="DB::table('oauth_clients')->get();"
+      
     - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
         DB_CONNECTION: mysql
@@ -124,4 +127,4 @@ jobs:
         REDIS_PORT: 6379
         CLIENT_ID: 9dd80945-481f-4c5e-b70c-95aaf721e12c
         CLIENT_SECRET: 228PQCYbmhxi0W3jePyPoZatAQMmi1gOR5EBUev4
-      run: php artisan test
+      run: php artisan test --verbose
