--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -113,8 +113,7 @@ jobs:
     
     - name: Debug OAuth Clients
       run: php artisan tinker --execute="DB::table('oauth_clients')->get()->toJson();"
-    - name: Install xdebug
-      run: sudo apt-get install php8.4-xdebug  
+     
     - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
         DB_CONNECTION: mysql
@@ -128,4 +127,6 @@ jobs:
         REDIS_PORT: 6379
         CLIENT_ID: 9dd80945-481f-4c5e-b70c-95aaf721e12c
         CLIENT_SECRET: 228PQCYbmhxi0W3jePyPoZatAQMmi1gOR5EBUev4
-      run: php artisan test --coverage
+      run: |
+        sudo apt-get install php8.3-xdebug
+        php artisan test --coverage
