--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -97,14 +97,14 @@ jobs:
       
     - name: Extract Client ID and Secret
       run: |
-        CLIENT_ID=$(grep -oP 'Client ID\s+.*\K[^\s]+' passport_client_output.txt)
-        CLIENT_SECRET=$(grep -oP 'Client secret\s+.*\K[^\s]+' passport_client_output.txt)
-        echo "CLIENT_ID=$CLIENT_ID" >> $GITHUB_ENV
-        echo "CLIENT_SECRET=$CLIENT_SECRET" >> $GITHUB_ENV
+          CLIENT_ID=$(grep -oP 'Client ID\s+\.+\s*\K[^\s.]+' passport_client_output.txt)  # Updated regex
+          CLIENT_SECRET=$(grep -oP 'Client secret\s+\.+\s*\K[^\s.]+' passport_client_output.txt)  # Updated regex
+          echo "CLIENT_ID=$CLIENT_ID" >> $GITHUB_ENV
+          echo "CLIENT_SECRET=$CLIENT_SECRET" >> $GITHUB_ENV
       
     - name: Debug Client ID and Secret
       run: |
-          echo "CLIENT_ID=$CLIENT_ID"
+          echo "CLIENT_ID=$CLIENT_ID"  
           echo "CLIENT_SECRET=$CLIENT_SECRET"
       
       
