--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -106,7 +106,14 @@ jobs:
       run: |
           echo "CLIENT_ID=$CLIENT_ID"  
           echo "CLIENT_SECRET=$CLIENT_SECRET"
-      
+    
+    - name: Update .env with Client ID and Secret
+      run: |
+            sed -i "s/^CLIENT_ID=.*/CLIENT_ID=$CLIENT_ID/" .env
+            sed -i "s/^CLIENT_SECRET=.*/CLIENT_SECRET=$CLIENT_SECRET/" .env  
+            
+    - name: Debug Updated .env
+      run: cat .env  # Check if the file contains the expected output.
       
     - name: Cache Configuration and Auto-Load
       run: | 
