--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -138,25 +138,8 @@ jobs:
         REDIS_HOST: 127.0.0.1
         REDIS_PASSWORD: null
         REDIS_PORT: 6379
-        CLIENT_ID: ${{ secrets.CLIENT_ID }}
-        CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+        CLIENT_ID: $(grep -oP '^CLIENT_ID=(.*)$' .env | cut -d'=' -f2)
+        CLIENT_SECRET: $(grep -oP '^CLIENT_SECRET=(.*)$' .env | cut -d'=' -f2)
       run: |
         sudo apt-get install php8.3-xdebug
         php artisan test --coverage
-
-
-# - name: Manual client creation
-# run: |
-#     php artisan tinker --execute="DB::table('oauth_clients')->insert([
-#         'name' => 'Testing Personal Access Client',
-#         'secret' => '228PQCYbmhxi0W3jePyPoZatAQMmi1gOR5EBUev4',
-#         'id' => '9dd80945-481f-4c5e-b70c-95aaf721e12c',
-#         'provider' => 'users',
-#         'user_id' => 1,
-#         'redirect' => 'http://localhost',
-#         'personal_access_client' => 1,
-#         'password_client' => 0,
-#         'revoked' => 0,
-#         'created_at' => now(),
-#         'updated_at' => now()
-#     ]);"
