--- a/.env.testing
+++ b/.env.testing
@@ -15,4 +15,6 @@ DB_PASSWORD=
 CLIENT_ID=9dddc2ec-dd00-49c2-9b5d-92aa487ef2da
 CLIENT_SECRET=Lvs7mLF31W1y1ING9GwEEYs5CGgSfvBqU0UZMb8p
 
+SLACK_WEBHOOK_URL=http://localhost/dummy-webhook
+
 
