--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/telescope": "^5.2",
         "laravel/tinker": "^2.9",
         "lcobucci/jwt": "^5.3",
+        "monolog/monolog": "^3.8",
         "predis/predis": "^2.0"
     },
     "require-dev": {
