--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "laravel/framework": "^11.9",
         "laravel/passport": "*",
         "laravel/sanctum": "^4.0",
+        "laravel/slack-notification-channel": "^3.4",
         "laravel/telescope": "^5.2",
         "laravel/tinker": "^2.9",
         "lcobucci/jwt": "^5.3",
