rework on data transformer and validation

--- a/.env.testing
+++ b/.env.testing
@@ -10,12 +10,13 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=testing
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=Cre2024@@@
 
-CLIENT_ID=9dddc2ec-dd00-49c2-9b5d-92aa487ef2da
-CLIENT_SECRET=Lvs7mLF31W1y1ING9GwEEYs5CGgSfvBqU0UZMb8p
+CLIENT_ID=9f53aa72-bf85-4e70-9c58-a7c938db342b
+CLIENT_SECRET=nzDzceWuqKcvKNknHTQYBIfGgneKRwgWKESNmvAe
 
 SLACK_WEBHOOK_URL=http://localhost/dummy-webhook
 RATE_LIMIT=20
 CRE_LOGIN=cre@epl.ca
 CRE_PASSWORD=cre2025@january
+LOG_SLACK_WEBHOOK_URL=
