--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
-    
+
     services:
       mysql:
         image: mysql:8.0
@@ -23,7 +23,7 @@ jobs:
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-      
+
       redis:
         image: redis
         ports:
@@ -31,39 +31,63 @@ jobs:
         options: --health-cmd="redis-cli ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
-    - uses: shivammathur/setup-php@v2
+    - uses: actions/checkout@v4
+
+    - name: Setup PHP
+      uses: shivammathur/setup-php@v2
       with:
         php-version: '8.3'
         extensions: mbstring, xml, ctype, iconv, intl, pdo_mysql, mysql, zip, redis
         coverage: none
-        
-    - uses: actions/checkout@v4
-    
-    - name: Copy .env
+
+    - name: Copy .env file
       run: php -r "file_exists('.env') || copy('.env.testing', '.env');"
-      
-    - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-      
-    - name: Generate key
+
+    - name: Install Composer Dependencies
+      run: composer install --no-interaction --prefer-dist --no-progress
+
+    - name: Generate Application Key
       run: php artisan key:generate
-      
-    - name: Directory Permissions
+
+    - name: Set Permissions
       run: chmod -R 777 storage bootstrap/cache
-      
-    - name: Create storage directory structure
+
+    - name: Create Required Files & Folders
       run: |
         mkdir -p storage/app
         echo '[]' > storage/app/duplicates.json
         chmod 666 storage/app/duplicates.json
-        
+
     - name: Wait for MySQL
       run: |
         while ! mysqladmin ping -h"127.0.0.1" -P"3306" --silent; do
           sleep 1
         done
-        
-    - name: Run migrations
+
+    - name: Publish Passport Migrations (if not already published)
+      run: php artisan vendor:publish --tag=passport-migrations --force
+
+    - name: Run Migrations
+      env:
+        DB_CONNECTION: mysql
+        DB_HOST: 127.0.0.1
+        DB_PORT: 3306
+        DB_DATABASE: testing
+        DB_USERNAME: root
+        DB_PASSWORD: ''
+      run: php artisan migrate:fresh --force
+
+    - name: Setup Passport Keys
+      env:
+        DB_CONNECTION: mysql
+        DB_HOST: 127.0.0.1
+        DB_PORT: 3306
+        DB_DATABASE: testing
+        DB_USERNAME: root
+        DB_PASSWORD: ''
+      run: php artisan passport:keys
+
+    - name: Generate Personal Access Client
       env:
         DB_CONNECTION: mysql
         DB_HOST: 127.0.0.1
@@ -72,56 +96,40 @@ jobs:
         DB_USERNAME: root
         DB_PASSWORD: ''
       run: |
-        php artisan migrate:fresh --force
-        
-    - name: Setup Passport
-      env:
-        DB_CONNECTION: mysql
-        DB_HOST: 127.0.0.1
-        DB_PORT: 3306
-        DB_DATABASE: testing
-        DB_USERNAME: root
-        DB_PASSWORD: ''
-      run: |
-        php artisan passport:keys
+        php artisan passport:client --personal --name="Testing Personal Access Client" --no-interaction > passport_client_output.txt
+        cat passport_client_output.txt
 
-    - name: Debug Passport Keys
-      run: |
-        ls -l storage/oauth*
-
-    - name: Generate Client ID and Secret
-      run: php artisan passport:client --name="Testing Personal Access Client" --no-interaction > passport_client_output.txt         
-      
     - name: Extract Client ID and Secret
       run: |
-          CLIENT_ID=$(grep -oP 'Client ID\s+\.+\s*\K[^\s.]+' passport_client_output.txt)  # Updated regex
-          CLIENT_SECRET=$(grep -oP 'Client secret\s+\.+\s*\K[^\s.]+' passport_client_output.txt)  # Updated regex
-          echo "CLIENT_ID=$CLIENT_ID" >> $GITHUB_ENV
-          echo "CLIENT_SECRET=$CLIENT_SECRET" >> $GITHUB_ENV
-      
+        CLIENT_ID=$(grep -oP 'Client ID\s*:\s*\K[^\s]+' passport_client_output.txt)
+        CLIENT_SECRET=$(grep -oP 'Client secret\s*:\s*\K[^\s]+' passport_client_output.txt)
+        echo "CLIENT_ID=$CLIENT_ID" >> $GITHUB_ENV
+        echo "CLIENT_SECRET=$CLIENT_SECRET" >> $GITHUB_ENV
+
     - name: Debug Client ID and Secret
       run: |
-          echo "CLIENT_ID=$CLIENT_ID"  
-          echo "CLIENT_SECRET=$CLIENT_SECRET"
-    
+        echo "CLIENT_ID=$CLIENT_ID"
+        echo "CLIENT_SECRET=$CLIENT_SECRET"
+
     - name: Update .env with Client ID and Secret
       run: |
-            sed -i "s/^CLIENT_ID=.*/CLIENT_ID=$CLIENT_ID/" .env
-            sed -i "s/^CLIENT_SECRET=.*/CLIENT_SECRET=$CLIENT_SECRET/" .env  
-            sed -i "s/^CLIENT_ID=.*/CLIENT_ID=$CLIENT_ID/" .env.testing
-            sed -i "s/^CLIENT_SECRET=.*/CLIENT_SECRET=$CLIENT_SECRET/" .env.testing 
-      
-    - name: Cache Configuration and Auto-Load
-      run: | 
+        sed -i "s/^CLIENT_ID=.*/CLIENT_ID=$CLIENT_ID/" .env || echo "CLIENT_ID=$CLIENT_ID" >> .env
+        sed -i "s/^CLIENT_SECRET=.*/CLIENT_SECRET=$CLIENT_SECRET/" .env || echo "CLIENT_SECRET=$CLIENT_SECRET" >> .env
+        sed -i "s/^CLIENT_ID=.*/CLIENT_ID=$CLIENT_ID/" .env.testing || echo "CLIENT_ID=$CLIENT_ID" >> .env.testing
+        sed -i "s/^CLIENT_SECRET=.*/CLIENT_SECRET=$CLIENT_SECRET/" .env.testing || echo "CLIENT_SECRET=$CLIENT_SECRET" >> .env.testing
+
+    - name: Clear and Cache Configurations
+      run: |
         php artisan cache:clear
         php artisan config:clear
         php artisan route:clear
         php artisan view:clear
-    
-    - name: Debug OAuth Clients
+
+    - name: Debug OAuth Clients Table
       run: php artisan tinker --execute="DB::table('oauth_clients')->get()->toJson();"
-     
-    - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
-      run: |
-        sudo apt-get install php8.3-xdebug
-        php artisan test --coverage
+
+    - name: Install Xdebug (for coverage)
+      run: sudo apt-get install php8.3-xdebug
+
+    - name: Run Tests (PHPUnit or Pest)
+      run: php artisan test --coverage
