--- a/.env.testing
+++ b/.env.testing
@@ -1,22 +1,39 @@
+# APP_ENV=testing
+# APP_KEY=base64:s+NgT0j8xvmyVGoQPM66cIONE8aXG6K3AMkJ2duMu1s=
+# APP_DEBUG=true
+# APP_TIMEZONE=UTC
+# APP_URL=http://cre.test
+
+
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=testing
+# DB_USERNAME=root
+# DB_PASSWORD=Cre2024@@@
+
+# CLIENT_ID=9f53aa72-bf85-4e70-9c58-a7c938db342b
+# CLIENT_SECRET=nzDzceWuqKcvKNknHTQYBIfGgneKRwgWKESNmvAe
+
+# SLACK_WEBHOOK_URL=http://localhost/dummy-webhook
+# RATE_LIMIT=20
+# CRE_LOGIN=cre@epl.ca
+# CRE_PASSWORD=cre2025@january
+# LOG_SLACK_WEBHOOK_URL=
+
+
 APP_ENV=testing
-APP_KEY=base64:s+NgT0j8xvmyVGoQPM66cIONE8aXG6K3AMkJ2duMu1s=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
-APP_URL=http://cre.test
-
-
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=testing
-DB_USERNAME=root
-DB_PASSWORD=Cre2024@@@
-
-CLIENT_ID=9f53aa72-bf85-4e70-9c58-a7c938db342b
-CLIENT_SECRET=nzDzceWuqKcvKNknHTQYBIfGgneKRwgWKESNmvAe
-
-SLACK_WEBHOOK_URL=http://localhost/dummy-webhook
-RATE_LIMIT=20
-CRE_LOGIN=cre@epl.ca
-CRE_PASSWORD=cre2025@january
-LOG_SLACK_WEBHOOK_URL=
+APP_KEY=base64:AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
+DB_CONNECTION=sqlite
+DB_DATABASE=:memory:
+CACHE_DRIVER=array
+SESSION_DRIVER=array
+QUEUE_CONNECTION=sync
+MAIL_MAILER=log
+LOG_CHANNEL=stack
+LOG_LEVEL=warning
+SANCTUM_STATEFUL_DOMAINS=localhost
+SESSION_DOMAIN=localhost
+CLIENT_ID=test-client
+CLIENT_SECRET=test-secret
