--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -13,22 +13,8 @@ on:
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
-    
-    services:
-      mysql:
-        image: mysql:8.0
-        env:
-          MYSQL_DATABASE: testing
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
-        ports:
-          - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-      
-      redis:
-        image: redis
-        ports:
-          - 6379:6379
-        options: --health-cmd="redis-cli ping" --health-interval=10s --health-timeout=5s --health-retries=3
+    env:
+      APP_ENV: testing
 
     steps:
     - uses: shivammathur/setup-php@v2
@@ -39,14 +25,15 @@ jobs:
         
     - uses: actions/checkout@v4
     
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.testing', '.env');"
+    - name: Use testing environment
+      run: |
+        test -f .env.testing && echo "Using .env.testing" || (echo ".env.testing missing" && exit 1)
       
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
       
-    - name: Generate key
-      run: php artisan key:generate
+    - name: Generate key for testing env
+      run: php artisan key:generate --env=testing
       
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
@@ -56,103 +43,14 @@ jobs:
         mkdir -p storage/app
         echo '[]' > storage/app/duplicates.json
         chmod 666 storage/app/duplicates.json
-        
-    - name: Wait for MySQL
-      run: |
-        while ! mysqladmin ping -h"127.0.0.1" -P"3306" --silent; do
-          sleep 1
-        done
-        
-    - name: Run migrations
-      env:
-        DB_CONNECTION: mysql
-        DB_HOST: 127.0.0.1
-        DB_PORT: 3306
-        DB_DATABASE: testing
-        DB_USERNAME: root
-        DB_PASSWORD: ''
-      run: |
-        php artisan migrate:fresh --force
-        
-    - name: Setup Passport
-      env:
-        DB_CONNECTION: mysql
-        DB_HOST: 127.0.0.1
-        DB_PORT: 3306
-        DB_DATABASE: testing
-        DB_USERNAME: root
-        DB_PASSWORD: ''
-      run: |
-        php artisan passport:keys
-
-    - name: Debug Passport Keys
-      run: |
-        ls -l storage/oauth*
-        
-    - name: Debug Passport Client
-      env:
-        DB_CONNECTION: mysql
-        DB_HOST: 127.0.0.1
-        DB_PORT: 3306
-        DB_DATABASE: testing
-        DB_USERNAME: root
-        DB_PASSWORD: ''
-      run: |
-          php artisan passport:client --personal --name="Testing Personal Access Client" --no-interaction > passport_client_output.txt
-          cat passport_client_output.txt
-
-    - name: Extract Client ID and Secret
-      run: |
-          CLIENT_ID=$(grep -oP 'Client ID\s+\.+\s*\K[^\s.]+' passport_client_output.txt)  # Updated regex
-          CLIENT_SECRET=$(grep -oP 'Client secret\s+\.+\s*\K[^\s.]+' passport_client_output.txt)  # Updated regex
-          echo "CLIENT_ID=$CLIENT_ID" >> $GITHUB_ENV
-          echo "CLIENT_SECRET=$CLIENT_SECRET" >> $GITHUB_ENV
       
-    - name: Debug Client ID and Secret
+    - name: Clear caches
       run: |
-          echo "CLIENT_ID=$CLIENT_ID"  
-          echo "CLIENT_SECRET=$CLIENT_SECRET"
-    
-    - name: Update .env with Client ID and Secret
-      run: |
-            sed -i "s/^CLIENT_ID=.*/CLIENT_ID=$CLIENT_ID/" .env
-            sed -i "s/^CLIENT_SECRET=.*/CLIENT_SECRET=$CLIENT_SECRET/" .env  
-            sed -i "s/^CLIENT_ID=.*/CLIENT_ID=$CLIENT_ID/" .env.testing
-            sed -i "s/^CLIENT_SECRET=.*/CLIENT_SECRET=$CLIENT_SECRET/" .env.testing 
-      
-    - name: Cache Configuration and Auto-Load
-      env:
-        DB_CONNECTION: mysql
-        DB_HOST: 127.0.0.1
-        DB_PORT: 3306
-        DB_DATABASE: testing
-        DB_USERNAME: root
-        DB_PASSWORD: ''
-        CACHE_STORE: file
-      run: | 
         php artisan cache:clear
         php artisan config:clear
         php artisan route:clear
         php artisan view:clear
-    
-    - name: Debug OAuth Clients
-      env:
-        DB_CONNECTION: mysql
-        DB_HOST: 127.0.0.1
-        DB_PORT: 3306
-        DB_DATABASE: testing
-        DB_USERNAME: root
-        DB_PASSWORD: ''
-      run: php artisan tinker --execute="DB::table('oauth_clients')->get()->toJson();"
-     
-    - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
-      env:
-        DB_CONNECTION: mysql
-        DB_HOST: 127.0.0.1
-        DB_PORT: 3306
-        DB_DATABASE: testing
-        DB_USERNAME: root
-        DB_PASSWORD: ''
+
+    - name: Run tests
       run: |
-        sudo apt-get install php8.3-xdebug
-        php artisan test --coverage
+        ./vendor/bin/pest -q
